<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t1"
            android:layout_marginLeft="20dp"
            />
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@color/purple_200"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t2"
            android:layout_marginLeft="20dp"
            />

        <EditText
            android:id="@+id/edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="@color/purple_200" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t3"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            />
        <RadioGroup
            android:id="@+id/grupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            >
            <RadioButton
                android:id="@+id/op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t4"
                />
            <RadioButton
                android:id="@+id/op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t5"
                android:layout_marginLeft="20dp"
                />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t6"
            android:layout_marginLeft="20dp"
            />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:entries="@array/valores" />
    </LinearLayout>
    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t7"
        android:layout_marginLeft="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <CheckBox
            android:id="@+id/cb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t8"
            android:checked="false"
            />
        <CheckBox
            android:id="@+id/cb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t9"
            android:checked="false"
            />
        <CheckBox
            android:id="@+id/cb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t10"
            android:checked="false"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enviar"
            android:layout_marginLeft="70dp"
            />
        <Button
            android:id="@+id/limpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Limpiar"
            android:layout_marginLeft="100dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="50"
        >
        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:textSize="50dp" />

    </LinearLayout>

</LinearLayout>